# EchoBook

./: .gitignore  README.md  main.py  pyproject.toml
translator/: api_client.py  epub_processor.py  text_splitter.py
